Implemented multiple things such as Clear, updatingCells, and Value. Still need to work on row/col up to Z and 100 as well as having cells display value until clicked on.

--- a/GUI.Client/Pages/SpreadsheetGUI.razor
+++ b/GUI.Client/Pages/SpreadsheetGUI.razor
@@ -12,7 +12,7 @@
 
 <PageTitle>Starter Code</PageTitle>
 
-<h1>Simple SpreadSheet GUI @(false ? "*" : "")</h1>
+<h1>Simple SpreadSheet GUI @(spreadsheet.Changed ? "*" : "")</h1>
 
 @* <remarks> Example of how to have two pages or an "alert" GUI. </remarks> *@
 @if (SaveGUIView)
